--- a/html/myCenter/chat.html
+++ b/html/myCenter/chat.html
@@ -369,6 +369,7 @@
 		<script src="../js/mui.imageViewer.js"></script>
 		<script src="../js/arttmpl.js"></script>
 		<script type="text/javascript" charset="utf-8">
+			mui.init();
 			(function($, doc) {
 				var MIN_SOUND_TIME = 800;
 				$.init({
